Text align buttons added, fixing #15

--- a/src/Modules/GrapesJS/resources/assets/sass/fields.scss
+++ b/src/Modules/GrapesJS/resources/assets/sass/fields.scss
@@ -21,3 +21,10 @@
 .gjs-field-arrow-u {
   border-bottom: 4px solid rgb(0, 135, 179);
 }
+
+.gjs-radio-item .gjs-radio-item-label {
+  padding-top: 10px;
+  margin-bottom: 0;
+  padding-bottom: 10px;
+  width: 100%;
+}
